c4prj2_input/grade.txt
Grading at Sat Aug  3 03:10:10 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:16:100: error: expected expression before ‘card_t’
  fc->decks[index].cards = realloc(fc->decks[index].cards, (fc->decks[index].n_cards + 1) * sizeof(*card_t));// *(fc->decks[index].cards)));
                                                                                                    ^
Compilation of future.c failed

Overall Grade: F
